* unit test: Reorganize the unit test lib. [Tobie Langel]

* Make Element#viewportOffset take advantage of getBoundingClientRect()'s speed boost when supported. [Andrew Dupont, Andrew Kaspick, jddalton]

* unit test: Add/modify unit tests for Event observe/stopObserving and Element#(absolutize|relativize|scrollTo|viewportOffset). [jddalton, Nick Stakenburg]

* For consistency, add additional optional parameter "context" to Number#times. Closes #9252. [rmm5t, Samuel Lebeau]

* Selector.patterns should be represented as an ordered structure. [#315 state:resolved] [ADO, kangax]

* Correct inconsistencies in Selector.patterns "attrPresence" and "attr" which allow attributes with dashes to be matched. [#285 state:resolved] [leiyou, jddalton, kangax]

* Ensure Form.reset() returns a reference to the form element. [#309 state:resolved] [Phil, kangax]

* Give Enumerable#invoke support for invoking host objects' methods that don't have apply(). [#278 state:resolved] [Garrett Smith, jddalton, kangax]

* Ensure String#gsub escapes special characters if pattern is a string. [#252 state:resolved] [jddalton, Marton Kiss-Albert]

* Ensure Enumerable#grep escapes special characters if regex is a string. [#257 state:resolved] [jddalton, Marton Kiss-Albert]

* Ensure Element#adjacent matches the css expression against siblings and not children of siblings. [#244 state:resolved] [jddalton, Jean-Philippe]

* Ensure Element#descendants always returns an array. [#373 state:resolved] [kangax]

* Optimize Event.pointerX() and Event.pointerY() to calculate one coordinate instead of both. [#403 state:resolved] [jddalton, Nick Stakenburg]

* Optimize Element#getWidth and Element#getHeight to calculate one dimension instead of both. [jddalton]

* Add helper methods Element.(_getCssDimensions|_getCssWidth|_getCssWidth) to reduce repeated code. [jddalton]

* Add helper method Element._hasLayout to reduce repeated code. [jddalton]
