@@ -1,3 +1,5 @@
+* Fix issue where Function#argumentNames returned incorrect results in IE when comments were intermixed with argument names. [#397 state:resolved] [Christophe Porteneuve, T.J. Crowder]
+
 * unit test: Reorganize the unit test lib. [Tobie Langel]
 
 * Make Element#viewportOffset take advantage of getBoundingClientRect()'s speed boost when supported. [Andrew Dupont, Andrew Kaspick, jddalton]
